--- a/.github/workflows/pr-commitlint-check.yml
+++ b/.github/workflows/pr-commitlint-check.yml
@@ -25,6 +25,12 @@ jobs:
           git fetch --unshallow || true
           git log --format='%s' origin/${{ github.event.pull_request.head.ref }} ^origin/${{ github.event.pull_request.base.ref }} > commit-messages.txt
 
+      - name: Print Commit Messages
+        run: cat commit-messages.txt
+
+      - name: List Files
+        run: ls -la
+
       - name: Run Commitlint on Commit Messages
         run: |
           npx commitlint < commit-messages.txt
